feat: finish swagger docs & json tag
