# api/request/contract.go
@@ -1,0 +1,9 @@
+package request
+
+type Contract struct {
+	UserID       uint `json:"-"`
+	ContractAddr string
+	ContractName string
+	Email        string
+	Network      uint
+}
