# models/type_contract.go
@@ -3,11 +3,11 @@ package models
 // Contract .
 type Contract struct {
 	GormModel
-	UserID             uint   `gorm:"NOT NULL"`
-	ContractAddr       string `gorm:"NOT NULL"`
-	ContractName       string
-	Network            uint `gorm:"NOT NULL"`
-	LastUpdate         uint64
-	Email              string
-	ContractHistoryArr []ContractHistory
+	UserID             uint              `gorm:"NOT NULL" json:"userID"`
+	Address            string            `gorm:"NOT NULL" json:"address"`
+	Name               string            `json:"name"`
+	Network            uint              `gorm:"NOT NULL" json:"network"`
+	LastUpdate         uint64            `json:"lastUpdate"`
+	Email              string            `json:"email"`
+	ContractHistoryArr []ContractHistory `json:"contractHistoryArr,omitempty"`
 }
