# models/type_contract_history.go
@@ -2,11 +2,11 @@ package models
 
 type ContractHistory struct {
 	GormModel
-	ContractID    uint
-	UpdateBlock   uint
-	Network       uint
-	UpdateTime    uint64
-	UpdateTX      string
-	PreviousOwner string
-	NewOwner      string
+	ContractID    uint   `json:"contractId"`
+	UpdateBlock   uint   `json:"updateBlock"`
+	Network       uint   `json:"network"`
+	UpdateTime    uint64 `json:"updateTime"`
+	UpdateTX      string `json:"updateTX"`
+	PreviousOwner string `json:"previousOwner"`
+	NewOwner      string `json:"newOwner"`
 }
