# models/type_user.go
@@ -3,8 +3,8 @@ package models
 // User .
 type User struct {
 	GormModel
-	Name        string
-	Address     string `gorm:"NOT NULL"`
-	Email       string
-	ContractArr []Contract
+	Name        string     `json:"name"`
+	Address     string     `gorm:"NOT NULL" json:"address"`
+	Email       string     `json:"email"`
+	ContractArr []Contract `json:"contractArr,omitempty"`
 }
